--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <title>Dan</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dan</title>
+
+  <style>
+    .nav-conteiner {
+  </style>
 </head>
-<body>
-    
+
+
+<nav>
+  <div class="nav-conteiner">
+    <a class="active" href="home">home</a>
+    <a href="#ancla">about us </a>
+    <a href="content creation">content creatinon</a>
+    <a href="astrology">astrology</a>
+    <a href="blog">blog</a>
+    <a href="archivos/archivo.jpg">enlace img</a>
+
+
+
+
+    <button type="button">letschat!</button>
+  </div>
+  <header>
+    <h1>hi,i'm Dan....</h1>
+    <p>let's know each other better and find the best wayto work together</p>
+    <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
+  </header>
+  <div>
+    <h2>categoris</h2>
+    <ul>
+      <li>some od the worki like the most</li>
+    </ul>
+  </div>
+  <div>
+    div class categoris
+  </div>
+</nav>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+  occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+<p id="ancla">Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
+  "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+  voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+  velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim
+  ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+  consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
+  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+
+
 </body>
+
 </html>
