Corrected format and added newsletter-box

--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -7,7 +7,7 @@
   <title>Dan</title>
 
   <style>
-    .nav-conteiner {
+
   </style>
 </head>
 
@@ -28,13 +28,13 @@
   </div>
   <header>
     <h1>hi,i'm Dan....</h1>
-    <p>let's know each other better and find the best wayto work together</p>
+    <p>let's know each other better and find the best way to work together</p>
     <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
   </header>
   <div>
-    <h2>categoris</h2>
+    <h2>categories</h2>
     <ul>
-      <li>some od the worki like the most</li>
+      <li>some of the work I like the most</li>
     </ul>
   </div>
   <div>
@@ -57,6 +57,16 @@
   vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 
 
+</body>
+
+<body>
+  <h1>Subscribe to my newsletter!</h1>
+
+  <form action="/action_page.php">
+    <label for="femail">E-mail:</label>
+    <input type="text" id="fname" name="fname"><br><br>
+    <input type="submit" value="Subscribe">
+  </form>
 </body>
 
 </html>
