agregue fotos figure etc

--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -33,12 +33,19 @@
   </header>
   <div>
     <h2>categories</h2>
-    <ul>
-      <li>some of the work I like the most</li>
-    </ul>
+   
   </div>
   <div>
-    div class categoris
+       <ul>
+      <li>some of the work I like the most</li>
+    </ul>
+     <figure> <img src="archivos/08630a01-453e-4b31-9e1b-6bfb7686aea1.jpeg" alt="playa" height="100px" width="100px">
+        <img src="archivos/descarga.jpeg" alt="playa">
+        <img src="archivos/descarga (1).jpeg" alt="playa">
+
+
+     </figure>
+
   </div>
 </nav>
 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
