--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
   <title>Dan</title>
 
   <style>
@@ -11,80 +14,96 @@
   </style>
 </head>
 
-
-<nav>
-  <div class="nav-conteiner">
-    <a class="active" href="home">home</a>
-    <a href="#ancla">about us </a>
-    <a href="content creation">content creatinon</a>
-    <a href="astrology">astrology</a>
-    <a href="blog">blog</a>
-    <a href="archivos/archivo.jpg">enlace img</a>
-
-
+<body>
+  <nav>
+    <div class="nav-conteiner">
+      <a class="active" href="home">home</a>
+      <a href="#ancla">about us </a>
+      <a href="content creation">content creatinon</a>
+      <a href="astrology">astrology</a>
+      <a href="blog">blog</a>
+      <a href="archivos/archivo.jpg">enlace img</a>
 
 
-    <button type="button">letschat!</button>
-  </div>
-  <header>
-    <h1>hi,i'm Dan....</h1>
-    <p>let's know each other better and find the best way to work together</p>
-    <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
-  </header>
-  <div>
-    <h2>categories</h2>
-   
-  </div>
-  <div>
-       <ul>
-      <li>some of the work I like the most</li>
-    </ul>
-     <figure> <img src="archivos/08630a01-453e-4b31-9e1b-6bfb7686aea1.jpeg" alt="playa" height="100px" width="100px">
+
+
+      <button type="button">letschat!</button>
+    </div>
+
+    <header>
+      <h1>hi,i'm Dan....</h1>
+      <p>let's know each other better and find the best way to work together</p>
+      <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
+    </header>
+
+    <div>
+      <h2>categories</h2>
+
+    </div>
+    <div>
+      <ul>
+        <li>some of the work I like the most</li>
+      </ul>
+      <figure>
+        <img src="archivos/08630a01-453e-4b31-9e1b-6bfb7686aea1.jpeg" alt="playa" height="100px" width="100px">
         <img src="archivos/descarga.jpeg" alt="playa">
         <img src="archivos/descarga (1).jpeg" alt="playa">
+      </figure>
+    </div>
+  </nav>
+
+  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint
+    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+
+  <p id="ancla">Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
+    "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+    aperiam,
+    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+    voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+    velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut
+    enim
+    ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+    consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
+    vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 
 
-     </figure>
+  <body>
 
-  </div>
-</nav>
-<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-  occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <!-- https://stackoverflow.com/questions/66790588/alert-message-on-button-submit-javascript -->
 
-<p id="ancla">Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-  "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-  voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-  velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim
-  ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-  consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-  vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+    <script>
+      function submit() {
+        alert("You subscribe to my Newsletter!").then(response => {
+          window.location.href = 'index.html';
+        })
+      }
+    </script>
 
+    <section>
+      <h1>Subscribe to my newsletter!</h1>
+      <div class="box">
+        <form onsubmit="submitNewsletter(event)">
+          <label for="femail">E-mail:</label>
+          <input type="email" id="femail" name="femail" required><br><br>
+          <input type="submit" value="Subscribe">
+        </form>
+      </div>
+    </section>
 
-</body>
+    <footer id="footer">
+      <div class="socials">
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
+      <p>© 2025 Dan's Website. All rights reserved.</p>
+    </footer>
 
-<body>
-
-  <!-- https://stackoverflow.com/questions/66790588/alert-message-on-button-submit-javascript -->
-
-  <script>
-    function submit() {
-      alert("You subscribe to my Newsletter!").then(response => {
-        window.location.href = 'index.html';
-      })
-    }
-  </script>
-
-  <h1>Subscribe to my newsletter!</h1>
-  <div class="box">
-    <label for="femail">E-mail:</label>
-    <input type="text" id="fname" name="fname"><br><br>
-    <input type="submit" value="Subscribe" onclick="submit()">
-    </form>
-</body>
-</div>
+  </body>
 
 </html>
