--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Dan</title>
 
   <style>
@@ -15,41 +15,47 @@
 </head>
 
 <body>
-  <nav>
-    <div class="nav-conteiner">
-      <a class="active" href="home">home</a>
-      <a href="#ancla">about us </a>
-      <a href="content creation">content creatinon</a>
-      <a href="astrology">astrology</a>
-      <a href="blog">blog</a>
-      <a href="archivos/archivo.jpg">enlace img</a>
-
-
-
-
-      <button type="button">letschat!</button>
-    </div>
-
-    <header>
-      <h1>hi,i'm Dan....</h1>
-      <p>let's know each other better and find the best way to work together</p>
-      <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
-    </header>
-
-    <div>
-      <h2>categories</h2>
-
-    </div>
-    <div>
-      <ul>
-        <li>some of the work I like the most</li>
+  <header>
+    <nav class="navbar">
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#ancla" class="nav-link">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Content Creation</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Astrology</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Blog</a>
+        </li>
       </ul>
-      <figure>
-        <img src="archivos/08630a01-453e-4b31-9e1b-6bfb7686aea1.jpeg" alt="playa" height="100px" width="100px">
-        <img src="archivos/descarga.jpeg" alt="playa">
-        <img src="archivos/descarga (1).jpeg" alt="playa">
-      </figure>
-    </div>
+       <button type="button">Let's chat!</button>
+    </nav>
+  </header>
+ 
+  <h1>hi,i'm Dan....</h1>
+  <p>let's know each other better and find the best way to work together</p>
+  <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
+
+  <div>
+    <h2>categories</h2>
+
+  </div>
+  <div>
+    <ul>
+      <li>some of the work I like the most</li>
+    </ul>
+    <figure>
+      <img src="archivos/08630a01-453e-4b31-9e1b-6bfb7686aea1.jpeg" alt="playa" height="100px" width="100px">
+      <img src="archivos/descarga.jpeg" alt="playa">
+      <img src="archivos/descarga (1).jpeg" alt="playa">
+    </figure>
+  </div>
   </nav>
 
   <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
