botones de lets chat y botones de imagenes

--- a/dan_website/index.html
+++ b/dan_website/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <title>Dan</title>
 
   <style>
@@ -34,23 +36,24 @@
           <a href="#" class="nav-link">Blog</a>
         </li>
       </ul>
-       <button type="button">Let's chat!</button>
+       <button type="button" class="btn btn-secondary">Let's chat!</button>
     </nav>
   </header>
- 
   <h1>hi,i'm Dan....</h1>
   <p>let's know each other better and find the best way to work together</p>
   <br>
   <br>
-  <img src="archivos/archivo.jpg" alt="imagen referencia dan" width="500px" height="500px">
+  <img src="archivos/archivo.jpg" alt="imagen referencia dan"  height="500" width="500">
 <br>
-<br>  
+<br>
 <br>
   <div>
     <h2>categories</h2>
   </div>
 
   <div>
+    <button type="button"  class="btn btn-secondary fa-solid fa-arrow-left"></button> 
+    <button type="button"  class="btn btn-secondary fa-solid fa-arrow-right"></button>
     <ul>
       <li>some of the work I like the most</li>
     </ul>
@@ -84,7 +87,7 @@
     vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 
 
-  <body>
+  </body>
 
     <!-- https://stackoverflow.com/questions/66790588/alert-message-on-button-submit-javascript -->
 
@@ -120,6 +123,6 @@
       <p>© 2025 Dan's Website. All rights reserved.</p>
     </footer>
 
-  </body>
+
 
 </html>
